# search_engine1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
JSON/: answers.json  config.json  requests.json
JSON/search_file/: 1.txt  2.txt
include/: ConverterJson.h  InvertedIndex.h  SearchServer.h
src/: ConverterJson.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: test_main.cpp
